# CSC305_RUST

./: .gitignore  Cargo.toml
data_type_example/src/: lib.rs
data_type_example/src/how_to_hold_data/: derived.rs
data_type_example/src/how_to_hold_data/derived/: pius_user_derived.rs  user_derived.rs
data_type_example/src/how_to_hold_data/primitive/: compound.rs  scalar.rs
function/src/: lib.rs  pointer.rs
lifetimes/src/: lib.rs
new_lib/src/: lib.rs
src/: greetings.rs  main.rs
src/greetings/: english.rs  french.rs
