[package]
name = "r7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
new_lib = {path = "lib/new_lib"}
data_type_example = {path = "lib/data_type_example"}
lifetimes = {path = "lib/lifetimes"}
function = {path = "lib/function"}
